Fix nav-bar border alignment

--- a/docs/style.css
+++ b/docs/style.css
@@ -26,6 +26,7 @@ body {
 .logo {
   display: flex;
   align-items: center;
+  border-bottom: 2px solid black;
 }
 .logo h2 {
   padding-left: 15px;
@@ -48,7 +49,6 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  border-top: 2px solid black;
 }
 .leftPanel a {
   display: block;
@@ -73,6 +73,7 @@ body {
 }
 .open {
   border-right: 2px solid black;
+  border-bottom: 2px solid black;
 }
 i {
   position: relative;
